Fixed file path issue

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
     <meta property="og:title" content="Gideon AI - Your Number One Trusted AI Assistant">
     <meta property="og:description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta property="og:image" content="https://gideon.vercel.app/assets/images/social-share-image.PNG">
-    <meta property="og:url" content="https://gideon.vercel.app">
+    <meta property="og:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.PNG">
+    <meta property="og:url" content="https://gideon-phi.vercel.app">
     <meta property="og:type" content="website">
     <meta name="robots" content="index, follow">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gideon AI - Your Number One Trusted AI Assistant">
     <meta name="twitter:description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta name="twitter:image" content="https://gideon.vercel.app/assets/images/social-share-image.PNG">
+    <meta name="twitter:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.PNG">
     <title>Gideon AI - Your Number One Trusted AI Assistant</title>
 
     <link rel="shortcut icon" href="./assets/images/gideon logo.PNG" type="image/x-icon">
