Update file path for images

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gideon AI - Your Number One Trusted AI Assistant">
     <meta name="twitter:description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta name="twitter:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.PNG">
+    <meta name="twitter:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.png">
     <title>Gideon AI - Your Number One Trusted AI Assistant</title>
 
-    <link rel="shortcut icon" href="./assets/images/gideon logo.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/gideon-logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
