--- a/index.html
+++ b/index.html
@@ -4,23 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="author" content="Godstime Pious" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta name="keywords" content="AI Chatbot, AI, Articificial Inteliigence, Chatbot, Virtual Assistant, Ai Assistant, Digital Assistant, Automated chat, Inteliigent Chatbot, Interactive AI, Personalized Chat">
+    <meta
+      name="description"
+      content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations."
+    />
+    <meta
+      name="keywords"
+      content="AI Chatbot, AI, Articificial Inteliigence, Chatbot, Virtual Assistant, Ai Assistant, Digital Assistant, Automated chat, Inteliigent Chatbot, Interactive AI, Personalized Chat"
+    />
 
-    <meta property="og:title" content="Gideon AI - Your Number One Trusted AI Assistant">
-    <meta property="og:description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta property="og:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.PNG">
-    <meta property="og:url" content="https://gideon-phi.vercel.app">
-    <meta property="og:type" content="website">
-    <meta name="robots" content="index, follow">
+    <meta
+      property="og:title"
+      content="Gideon AI - Your Number One Trusted AI Assistant"
+    />
+    <meta
+      property="og:description"
+      content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations."
+    />
+    <meta
+      property="og:image"
+      content="https://gideon-phi.vercel.app/assets/images/social-share-image.png"
+    />
+    <meta property="og:url" content="https://gideon-phi.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Gideon AI - Your Number One Trusted AI Assistant">
-    <meta name="twitter:description" content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations.">
-    <meta name="twitter:image" content="https://gideon-phi.vercel.app/assets/images/social-share-image.png">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Gideon AI - Your Number One Trusted AI Assistant"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover the power of AI. Our chatbot provides helpful information, solves problems, and engages in natural conversations."
+    />
+    <meta
+      name="twitter:image"
+      content="https://gideon-phi.vercel.app/assets/images/social-share-image.png"
+    />
     <title>Gideon AI - Your Number One Trusted AI Assistant</title>
 
-    <link rel="shortcut icon" href="./assets/images/gideon-logo.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/images/gideon-logo.png"
+      type="image/x-icon"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,13 +74,10 @@
     </nav>
 
     <main>
-      <div class="chat-container">
-       
-      </div>
+      <div class="chat-container"></div>
       <div class="message-container">
         <div class="message-box">
           <form action="#" method="post" id="geminiForm">
-            <label for="message" aria-hidden>Message</label>
             <textarea name="" draggable="false" id="message"></textarea>
             <button class="message-btn" id="js-message-btn">SEND</button>
           </form>
@@ -61,11 +86,9 @@
           Gideon can make mistakes
           <a href="https://ai.google.com/">Learn more.</a>
         </p>
-        <p class="trademark-text warning-text"></p>
       </div>
     </main>
 
-    <script type="module"  src="./src/app.js"></script>
+    <script type="module" src="./src/app.js"></script>
   </body>
 </html>
-
